# projeto-Fundamentos-de-Computa-o-Concorrente-Paralela-e-Distribu-da

./: README.md  pyproject.toml
src/distribcalc/: __init__.py  client.py  protocol.py  report.py  server.py  tasks.py
src/distribcalc.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_tasks.py
