[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distribcalc"
version = "0.1.0"
description = "Distributed prime computation demo with concurrency and parallelism"
authors = [{ name = "Projeto Distribuído" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "reportlab>=3.6.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[project.scripts]
distribcalc-server = "distribcalc.server:run_server"
distribcalc-client = "distribcalc.client:run_client"
distribcalc-report = "distribcalc.report:generate_report"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
